Implement facebook callback endpoint.

--- a/demo-facebook/src/main/resources/templates/login.html
+++ b/demo-facebook/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" th:with="currentPage='services'"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <head lang="en">
-    <title>Login - Line</title>
+    <title>Login - Facebook</title>
 </head>
 <body>
 <div class="container">
