--- a/demo-google/src/main/resources/templates/complete.html
+++ b/demo-google/src/main/resources/templates/complete.html
@@ -2,12 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org" th:with="currentPage='services'"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <head lang="en">
-    <title>Complete - Line</title>
+    <title>Complete - Google</title>
 </head>
 <body>
 <div class="container">
     <div class="jumbotron alert-danger">
         <h1>Complete</h1>
+        <th:block th:if="${accessTokenResponse != null}">
+            <table class="table">
+                <tr>
+                    <th>Access Token Response:
+                    </th>
+                    <td th:text="${accessTokenResponse}">-</td>
+                </tr>
+            </table>
+        </th:block>
     </div>
 </div>
 </body>
